atualizaçao de foto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <main id="inicio" class="cabecalho">
-        <img src="imagem/gato1300.jpg" alt="foto Leandro" class="fotoperfil">
+        <img src="imagem/fotoperfil.jpg" alt="foto Leandro" class="fotoperfil">
         <h1>Leandro Henrique</h1>
         <p class="cabecalhosubtitulo">Estudante de análise e Desenvolvimento de Sistemas</p>
         <div class="icones">
