--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
         <h2 class="projetostitulo">Meus Projetos</h2>
         <div class="projetoscaixa">
             <div class="projetoscard">
-                <img src="imagem/gato2300.jpg" alt="projeto 1" class="projetosimagem">
+                <img src="imagem/icone.png" alt="projeto 1" class="projetosimagem">
                 <div class="caixatextosprojeto">
                     <h3 class="infoprojetos">Projeto 1</h3>
-                    <p class="paragrafoprojetos">Descrição do projeto 1.</p>
+                    <p class="paragrafoprojetos">Em desenvolvimento...</p>
                 </div>
             </div>
-            <div class="projetoscard">
+            <!--<div class="projetoscard">
                 <img src="imagem/gato2300.jpg" alt="projeto 2" class="projetosimagem">
                 <div class="caixatextosprojeto">
                     <h3 class="infoprojetos">Projeto 2</h3>
                     <p class="paragrafoprojetos">Descrição do projeto 2.</p>
                 </div>
-            </div>
-            <div class="projetoscard">
+            </div>-->
+            <!--<div class="projetoscard">
                 <img src="imagem/gato2300.jpg" alt="projeto 3" class="projetosimagem">
                 <div class="caixatextosprojeto">
                     <h3 class="infoprojetos">Projeto 3</h3>
                     <p class="paragrafoprojetos">Descrição do projeto 3.</p>
                 </div>
-            </div>
+            </div>-->
         </div>
         </div>
     </section>
